Interfaz modificada y formulario de registro estabalecido conectado con la BD

--- a/login.html
+++ b/login.html
@@ -12,9 +12,19 @@
         <script src="js/controller.js"></script>
 	     </head>    
          <body>
+
+<!-- Navegación -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header page-scroll">                   
+                 <a class="navbar-brand page-scroll" href="index.html">Inicio</a>
+           </div>
+          </div>
+    </nav>
+
         <div id="container">
             <div id="logo">
-                <img src="img/mundocente.png" class="img-responsive img-circle" alt="" >
+                <img src="img/mundocente.png" class="img-responsive" alt="" >
             </div>
             <div id="loginbox">            
                 <form id="loginform" action="index.html">
@@ -32,12 +42,7 @@
                     <div class="form-actions clearfix">                      
  						<input class="btn btn-block btn-primary btn-default" value="Acceder" type="submit">
                     </div>
-                    <div class="footer-login">                             
-                    </div>
                 </form>
-                </div>
-                <button type="button" class="btn btn-info" btn-responsive href="index.html" onClick="window.location.href='index.html'">inicio</button>
-        	</div>
         <script src="js/jquery.js"></script>  
         <script src="js/jquery-ui.js"></script>
         <script src="js/login.js"></script> 
